# mg2023

./: .dir-locals.el  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  INSTALL  keys.txt  makefile.orig  mg.h
Browser/: browser.cc  browser_gobj.cc  scenes.cc  scenes.h
Camera/: avatar.cc  avatar.h  avatarManager.cc  avatarManager.h  camera.cc  camera.h  cameraManager.cc  cameraManager.h
Geometry/: gObject.cc  gObject.h  gObjectManager.cc  gObjectManager.h  triangleMesh.cc  triangleMesh.h  triangleMeshGL.cc  triangleMeshGL.h
Json/: scene.json  scene_bmap.json  scene_cookTorrance.json  scene_cookTorrance_tex.json  scene_dummy.json  scene_envcube.json  scene_leeperry.json  scene_lightchapel.json  scene_multitex.json  scene_perfragment.json  scene_sc.json  scene_shadow.json  scene_sky.json  scene_specularmap.json
Math/: CMakeLists.txt  Makefile  bbox.cc  bbox.h  bboxGL.cc  bboxGL.h  bsphere.cc  bsphere.h  intersect.cc  intersect.h  line.cc  line.h  plane.cc  plane.h  quaternion.cc  quaternion.h  segment.cc  segment.h  test.cc  trfm3D.cc  trfm3D.h  trfmStack.cc  trfmStack.h  vector3.cc  vector3.h
Misc/: Makefile  constants.cc  constants.h  glm.c  glm.h  jsoncpp.cpp  mgriter.h  mgrviter.h  parse_scene.cc  parse_scene.h  tools.cc  tools.h
Scene/: node.cc  node.h  nodeManager.cc  nodeManager.h  renderState.cc  renderState.h  scene.cc  scene.h  skybox.cc  skybox.h
Shaders/: bump_shader.frag  bump_shader.vert  dummy.frag  dummy.vert  environment_map.frag  environment_map.vert  perfragment.frag  perfragment.vert  pervertex.frag  pervertex.vert  pervertex_multitex.frag  shader.cc  shader.h  shaderManager.cc  shaderManager.h  shaderUtils.cc  shaderUtils.h  sky.frag  sky.vert  specular_map.frag  specular_map.vert  uniform.cc  uniform.h
Shading/: image.cc  image.h  imageManager.cc  imageManager.h  light.cc  light.h  lightManager.cc  lightManager.h  material.cc  material.h  materialManager.cc  materialManager.h  texture.cc  texture.h  textureManager.cc  textureManager.h  texturert.cc  texturert.h
